fixed spelling error

--- a/kaira.html
+++ b/kaira.html
@@ -47,7 +47,7 @@
     <li>Palak Paneer-259</li>
     <li>Aloo Matar-179</li>
     <li>Aloo Jeera-149</li>
-    <li>Aloo Gpbhi-259</li>
+    <li>Aloo Gobhi-259</li>
 </ul>
 
 <h3>Created By:</h3>
