--- a/kaira2.html
+++ b/kaira2.html
@@ -5,22 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Timetable - CSE Department</title>
     <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            text-align: center;
-        }
-        th, td {
+        table, th, td {
             border: 1px solid black;
+            border-collapse: collapse;
+            text-align: center;
             padding: 8px;
         }
         caption {
             font-weight: bold;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
+
     <table>
         <caption>College Timetable - CSE Department</caption>
         <tr>
@@ -33,58 +31,75 @@
             <th>2:00 - 3:00</th>
             <th>3:00 - 4:00</th>
         </tr>
+
         <tr>
             <th>Monday</th>
             <td>Mathematics</td>
             <td>English</td>
-            <td>Physics</td>
-            <td rowspan="5">Break</td>
-            <td>Computer Lab</td>
+            <td>Break</td>
+            <td colspan="2">Computer Lab</td>
             <td colspan="2">Sports</td>
         </tr>
+
         <tr>
             <th>Tuesday</th>
-            <td>Mathematics</td>
-            <td>C Programming</td>
+            <td rowspan="2">C Programming</td>
             <td>Physics</td>
+            <td>Break</td>
             <td colspan="2">Electronics Lab</td>
-            <td>Library</td>
+            <td colspan="2" rowspan="2">Library</td>
         </tr>
+
         <tr>
             <th>Wednesday</th>
             <td>Mathematics</td>
             <td>English</td>
+            <td>Break</td>
+            <td colspan="2">Computer Networks</td>
+        </tr>
+
+        <tr>
+            <th>Thursday</th>
+            <td>Workshop</td>
+            <td></td>
             <td>Physics</td>
-            <td>Computer Networks</td>
-            <td colspan="2" rowspan="2">
-                <table border="1" cellpadding="5" cellspacing="0">
-                    <caption>Lab Details</caption>
+            <td>Break</td>
+            <td>Mathematics</td>
+            <td>English</td>
+            <td>
+                <table style="width:100%; border: none; border-collapse: collapse;">
                     <tr>
-                        <td>Batch A</td>
-                        <td>DBMS Lab</td>
+                        <td colspan="2" style="border:none;"><b>Lab Details</b></td>
                     </tr>
                     <tr>
-                        <td>Batch B</td>
-                        <td>OS Lab</td>
+                        <td style="border:none;">Batch A</td>
+                        <td style="border:none;">HTML Lab</td>
+                    </tr>
+                    <tr>
+                        <td style="border:none;">Batch B</td>
+                        <td style="border:none;">OS Lab</td>
                     </tr>
                 </table>
             </td>
         </tr>
-        <tr>
-            <th>Thursday</th>
-            <td colspan="2">Workshop</td>
-            <td>Mathematics</td>
-            <td>Physics</td>
-            <td>English</td>
-            <td>Seminar</td>
-        </tr>
+
         <tr>
             <th>Friday</th>
-            <td>Computer Networks</td>
+            <td>Computer Network</td>
             <td>English</td>
             <td>Physics</td>
-            <td colspan="3">Project Work</td>
+            <td>Break</td>
+            <td colspan="2">Project Work</td>
+            <td>Seminar</td>
         </tr>
     </table>
+
+    <h3>Outcome:</h3>
+    <ul>
+        <li>Successfully created a college timetable webpage using HTML tables.</li>
+        <li>Implemented rowspan, colspan, headers, captions, and nested tables.</li>
+        <li>Learned to organize tabular data in a structured webpage format.</li>
+    </ul>
+
 </body>
 </html>
